Coverity analysis defect 120694: Uninitialized scalar field

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • Repl 2021-10-04
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Uninitialized scalar field

      The field will contain an arbitrary value left over from earlier computations. A scalar field is not initialized by the constructor
      /src/mongo/db/modules/enterprise/src/fcbis/file_copy_based_initial_syncer.h:180: UNINIT_CTOR 120694 Class member declaration for "_initialSyncAttempt".
      /src/mongo/db/modules/enterprise/src/fcbis/file_copy_based_initial_syncer.cpp:44: UNINIT_CTOR 120694 Non-static class member "_initialSyncAttempt" is not initialized in this constructor nor in any functions that it calls.
      /src/mongo/db/modules/enterprise/src/fcbis/file_copy_based_initial_syncer.h:181: UNINIT_CTOR 120694 Class member declaration for "_initialSyncMaxAttempts".
      /src/mongo/db/modules/enterprise/src/fcbis/file_copy_based_initial_syncer.cpp:44: UNINIT_CTOR 120694 Non-static class member "_initialSyncMaxAttempts" is not initialized in this constructor nor in any functions that it calls.
      /src/mongo/db/modules/enterprise/src/fcbis/file_copy_based_initial_syncer.h:184: UNINIT_CTOR 120694 Class member declaration for "_chooseSyncSourceAttempt".
      /src/mongo/db/modules/enterprise/src/fcbis/file_copy_based_initial_syncer.cpp:44: UNINIT_CTOR 120694 Non-static class member "_chooseSyncSourceAttempt" is not initialized in this constructor nor in any functions that it calls.
      /src/mongo/db/modules/enterprise/src/fcbis/file_copy_based_initial_syncer.h:185: UNINIT_CTOR 120694 Class member declaration for "_chooseSyncSourceMaxAttempts".
      /src/mongo/db/modules/enterprise/src/fcbis/file_copy_based_initial_syncer.cpp:44: UNINIT_CTOR 120694 Non-static class member "_chooseSyncSourceMaxAttempts" is not initialized in this constructor nor in any functions that it calls.

            Assignee:
            Adi Zaimi (Inactive)
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: