SERVER-59896 Initialize uint32 member variables

GitOrigin-RevId: ac3572c14e27a3d1e25d7ec5b33ca3f00464704d